# stock_analysis_using_ml

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
config/: configuration.md
models/: model.md
notebooks/: notebook.md
results/: results.md
src/get_data/: nse_data.py
