[tool.poetry]
name = "stock-analysis-using-ml"
version = "0.1.0"
description = ""
authors = ["shubhammandowara <shubham77mandowara@gmail.com>"]
readme = "README.md"
packages = [{include = "stock_analysis_using_ml"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
